grammar.js
    translation_unit: $ => choice(
      // A complete (normal) Fortran source file
      seq(
        repeat($._top_level_item_normal),
        optional($.program),
      ),
      // A relaxed top-level parsing, allowing specification parts and
      // executable statements at top-level. This is particularly useful for
      // parsing include files, which typically contain fragments of code
      $._relaxed_translation_unit,
    ),

    _relaxed_translation_unit: $ => seq(
      // 0 or more
      repeat($._top_level_item_normal),
      // At least one item not typically allowed at top-level
      $._top_level_item_floating,
      // Ideally, we would now allow any number of `top_level_item` nodes,
      // which include both `_top_level_item_normal` and
      // `_top_level_item_floating`. However, we need a workaround for
      // implicit programs (those without an explicit starting statement, and
      // that end abruptly); e.g.:
      //
      //     return 1
      //   end
      // 
      // Because implicit programs lack an starting `program` statement,
      // tree-sitter initially parses the code as "floating". When it later
      // encounters the `end` that implies a program scope, tree-sitter
      // creates and immediately closes an empty program node. This isn't an
      // accurate representation of the source code, as all statements that
      // looked "floating" actually belong inside the program.
      // 
      // I tried to adjust parsing priorities to steer tree-sitter down the
      // correct path in these scenarios, but every attempt ended up breaking
      // the handling of floating code in some way.
      //
      // Ultimately, the simplest workable compromise I found is to replace
      // `top_level_item` with `top_level_item_no_program` and allow an
      // optional `end_program_statement`. This approach preserves correct
      // parsing of floating code, while also allowing the parse tree to
      // represent implicit programs via their terminator, instead of
      // creating empty program nodes.
      repeat($._top_level_item_no_program),
      optional($.end_program_statement),
    ),

    _top_level_item_normal: $ => prec(4,
      normalTopLevelItemInFortranFile($, /*allowProgram=*/true)
    ),

    program: $ => seq(
      optional($.program_statement),
      repeat(
        choice(
          $._specification_part,
          alias($.preproc_if_in_specification_part, $.preproc_if),
          alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef)
        ),
      ),
      repeat($._statement),
      optional($.internal_procedures),
      optional($.statement_label),
      $.end_program_statement,
      $.end_of_statement
    ),

    program_statement: $ => seq(
      caseInsensitive('program'),
      field('name', $._name),
      $.end_of_statement
    ),
    end_program_statement: $ => blockStructureEnding1($, 'program', $._name),

    module_name: $ => $._name,

    assignment: $ => seq(caseInsensitive('assignment'), '(', '=', ')'),
    defined_io_procedure: $ => seq(
      choice(caseInsensitive('read'), caseInsensitive('write')),
      '(',
      choice(caseInsensitive('formatted'), caseInsensitive('unformatted')),
      ')'
    ),
    _generic_procedure: $ => choice(
        $.assignment,
        $.operator,
        $.defined_io_procedure,
    ),

    subroutine: $ => procedure($, $.subroutine_statement, $.end_subroutine_statement),

    subroutine_statement: $ => seq(
      optional($._callable_interface_qualifers),
      caseInsensitive('subroutine'),
      field('name', $._name),
      optional(field('parameters',$._parameters)),
      optional($.language_binding),
      $.end_of_statement,
    ),

    end_subroutine_statement: $ => blockStructureEnding1($, 'subroutine', $._name),

    function: $ => procedure($, $.function_statement, $.end_function_statement),

    function_statement: $ => seq(
      optional($._callable_interface_qualifers),
      caseInsensitive('function'),
      field('name', $._name),
      optional(field('parameters',$._parameters)),
      optional(repeat(choice(
        $.language_binding,
        $.function_result
      ))),
      $.end_of_statement,
    ),

    _callable_interface_qualifers: $ => repeat1(
      prec.right(1, choice(
        $.procedure_attributes,
        $.procedure_qualifier,
        field('type', $.intrinsic_type),
        field('type', $.derived_type)
      ))),

    end_function_statement: $ => blockStructureEnding1($, 'function', $._name),

    function_result: $ => seq(
      caseInsensitive('result'),
      '(',
      $._identifier,
      ')'
    ),

    _name: $ => alias($._identifier, $.name),

    _parameters: $ => choice(
      seq('(', ')'),
      $.parameters
    ),

    parameters: $ => seq(
      '(',
      commaSep1($._identifier),
      ')'
    ),

    internal_procedures: $ => seq(
      $.contains_statement,
      $.end_of_statement,
      repeat($._internal_procedures)
    ),

    contains_statement: $ => caseInsensitive('contains'),

    _internal_procedures: $ => choice(
      $.function,
      $.module_procedure,
      $.subroutine,
      $.include_statement,
      alias($.preproc_if_in_internal_procedures, $.preproc_if),
      alias($.preproc_ifdef_in_internal_procedures, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    // Variable Declarations

    _specification_part: $ => prec(1, choice(
      // Split out so it can be used as a supertype
      seq($._specification_parts, $.end_of_statement),
      // These two can't be included in the above because or we
      // duplicate the end_of_statement in the end block rule
      $.interface,
      $.derived_type_definition,
      // This allows format statements in the specification part,
      // without making the statements rule particularly awkward
      prec(1, seq($.statement_label, $.format_statement, $.end_of_statement)),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_specification_part, $.preproc_if),
      alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef),
      ';',
    )),

    use_statement: $ => seq(
      caseInsensitive('use'),
      choice(
        optional(
          seq(',', choice(caseInsensitive('intrinsic'), caseInsensitive('non_intrinsic')), '::')
        ),
        optional('::')
      ),
      $.module_name,
      optional(
        choice(
          seq(',', commaSep1($.use_alias)),
          $.included_items
        )
      ),
    ),

    included_items: $ => seq(
      ',',
      caseInsensitive('only'),
      ':',
      optional(commaSep1(
        choice(
          $.use_alias,
          $._identifier,
          $._generic_procedure)
      ))
    ),

    implicit_statement: $ => seq(
      caseInsensitive('implicit'),
      choice(
        commaSep1(seq(
          choice(
            $.intrinsic_type,
            $.derived_type
          ),
          '(',
          commaSep1($.implicit_range),
          ')'
        )),
        seq(
          alias(caseInsensitive('none', false), $.none),
          optional(seq(
            '(',
            commaSep1(choice(
              caseInsensitive('type'),
              caseInsensitive('external')
            )),
            ')'
          ))
        )
      ),
    ),

    _type_name: $ => alias($._identifier, $.type_name),

    variable_declaration: $ => seq(
      field('type', choice(
        $.intrinsic_type,
        $.derived_type,
        alias($.procedure_declaration, $.procedure),
        $.declared_type,
        $.macro_identifier,
      )),
      optional(seq(',',
        commaSep1(
          field(
            'attribute',
            choice(
              $.type_qualifier,
              $.language_binding
            ))
        )
      )),
      optional('::'),
      $._declaration_targets,
    ),

    sized_declarator: $ => prec.right(1, seq(
        $._identifier,
        choice(
          seq(
            alias($.argument_list, $.size),
            optional($.character_length),
          ),
          $.character_length
        )
    )),

    _declaration_targets: $ => commaSep1(field('declarator', choice(
      $._variable_declarator,
      alias($._declaration_assignment, $.init_declarator),
      alias($._declaration_pointer_association, $.pointer_init_declarator),
      $.data_declarator,
    ))),

    _intrinsic_type: $ => choice(
        caseInsensitive('byte'),
        caseInsensitive('integer'),
        caseInsensitive('real'),
        whiteSpacedKeyword('double', 'precision'),
        caseInsensitive('complex'),
        whiteSpacedKeyword('double', 'complex'),
        caseInsensitive('logical'),
        caseInsensitive('character'),
    ),

    intrinsic_type: $ => seq(
      $._intrinsic_type,
      optional(field('kind', $.kind)),
    ),

    derived_type: $ => seq(
      choice(caseInsensitive('type'), caseInsensitive('class')),
      '(',
      // Strictly, only `class` can be unlimited polymorphic
      choice(
        seq(
          field('name', choice(
            prec.dynamic(1, alias($._intrinsic_type, $.intrinsic_type)),
            $._type_name,
          )),
          optional(field('kind', $.kind)),
        ),
        $.unlimited_polymorphic
      ),
      ')'
    ),

    kind: $ => choice(
      seq(optional(alias('*', $.assumed_size)), $._argument_list),
      seq('*', choice(alias(/\d+/, $.number_literal), $.parenthesized_expression))
    ),

    _statement: $ => choice(
      alias($.preproc_if_in_statements, $.preproc_if),
      alias($.preproc_ifdef_in_statements, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      seq(
        optional($.statement_label),
        $._statements,
        $.end_of_statement
      ),
      ';'
    ),

    statement_label: $ => prec(1, alias($._integer_literal, 'statement_label')),

    statement_label_reference: $ => alias($.statement_label, 'statement_label_reference'),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left',$._expression),
      '=',
      field('right',$._expression),
    )),

    subroutine_call: $ => prec(1, seq(
      caseInsensitive('call'),
      // Allow expressions to allow calling type-bound procedures
      field('subroutine', $._expression),
      optional($.cuda_kernel_argument_list),
      optional($.argument_list)
    )),

    if_statement: $ => choice(
      $.inline_if_statement,
      $.block_if_statement
    ),

    block_if_statement: $ => seq(
      optional($.block_label_start_expression),
      caseInsensitive('if'),
      $.parenthesized_expression,
      caseInsensitive('then'),
      optional($._block_label),
      $.end_of_statement,
      repeat($._statement),
      repeat($.elseif_clause),
      optional($.else_clause),
      optional($.statement_label),
      $.end_if_statement
    ),

    end_if_statement: $ => blockStructureEnding1($, 'if', $._block_label),

    elseif_clause: $ => seq(
      whiteSpacedKeyword('else', 'if'),
      $.parenthesized_expression,
      caseInsensitive('then'),
      optional($._block_label),
      $.end_of_statement,
      repeat($._statement)
    ),

    else_clause: $ => seq(
      caseInsensitive('else'),
      optional($._block_label),
      $.end_of_statement,
      repeat($._statement)
    ),

    format_statement: $ => prec.dynamic(PREC.CALL, seq(
      caseInsensitive('format'),
      '(',
      alias($._transfer_items, $.transfer_items),
      ')'
    )),

    _transfer_items: $ => sep1($._transfer_item, optional(',')),

    // H is not a valid edit descriptor because it clashes with Hollerith constants
    edit_descriptor: $ => choice('/', /[a-gi-zA-GI-Z0-9:.*$]+/),

    _io_arguments: $ => seq(
      '(',
      choice(
        $.unit_identifier,
        seq($.unit_identifier, ',', $.format_identifier),
        seq($.unit_identifier, ',', $.format_identifier, ',', commaSep1($.keyword_argument)),
        seq($.unit_identifier, ',', commaSep1($.keyword_argument)),
        commaSep1($.keyword_argument)
      ),
      ')'
    ),

    print_statement: $ => seq(
      caseInsensitive('print'),
      $.format_identifier,
      optional(seq(',', $.output_item_list))
    ),

    write_statement: $ => prec(1, seq(
      caseInsensitive('write'),
      $._io_arguments,
      // Trailing comma here is a legacy extension to gfortran
      optional(','),
      optional($.output_item_list)
    )),

    unit_identifier: $ => seq(
      optional(seq(caseInsensitive('unit'), '=')),
      prec(1, choice(
        $.number_literal,
        $._io_expressions
      ))
    ),

    format_identifier: $ => seq(
      optional(seq(caseInsensitive('fmt'), '=')),
      choice(
        $.statement_label_reference,
        $._io_expressions
      )
    ),

    _io_expressions: $ => prec(1, choice(
      '*',
      $.prefixed_string_literal,
      $._identifier,
      $.derived_type_member_expression,
      $.concatenation_expression,
      $.math_expression,
      $.parenthesized_expression,
      $.call_expression
    )),

    output_item_list: $ => prec.right(commaSep1($._expression)),

    _expression: $ => choice(
      $.number_literal,
      $.complex_literal,
      $.prefixed_string_literal,
      $.boolean_literal,
      $.array_literal,
      $.null_literal,
      $._identifier,
      $.derived_type_member_expression,
      $.logical_expression,
      $.relational_expression,
      $.concatenation_expression,
      $.math_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.call_expression,
      $.implied_do_loop_expression,
      $.coarray_expression,
      $.conditional_expression,
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    concatenation_expression: $ => prec.right(PREC.ADDITIVE, seq(
      field('left', $._expression),
      field('operator', '//'),
      field('right', $._expression)
    )),

    call_expression: $ => prec(
      PREC.CALL,
      seq($._expression, repeat1($.argument_list))
    ),

    _argument_list: $ => prec.dynamic(
      1,
      seq('(', commaSep(choice($._expression, $._argument_item)), ')')
    ),
    argument_list: $ => $._argument_list,

    // precedence is used to prevent conflict with assignment expression
    keyword_argument: $ => prec(1, seq(
      field("name",$._identifier),
      field("equal", '='),
      field("value",choice($._expression, $.assumed_size, $.assumed_shape))
    )),

    _extent_specifier: $ => seq(
      optional($._expression), // start
      ':',
      optional(choice($._expression, $.assumed_size)), // stop
      optional(seq(':', $._expression)) // stride
    ),
    extent_specifier: $=> $._extent_specifier,

    block_label_start_expression: $ => seq(alias($._identifier, 'label'), ':'),
    _block_label: $ => alias($._identifier, $.block_label),

    array_literal: $ => choice(
      $._array_constructor_legacy,
      $._array_constructor_f2003
    ),

    _array_constructor_legacy: $ => seq('(/', $._ac_value_list, '/)'),

    _array_constructor_f2003: $ => seq('[', $._ac_value_list, ']'),

    number_literal: $ => seq(
      choice(
        $._integer_literal,
        $._float_literal,
        $._boz_literal
      ),
      optional($._kind)
    ),

    boolean_literal: $ => seq(
      choice(
        caseInsensitive('\\.true\\.'),
        caseInsensitive('\\.false\\.')
      ),
      optional($._kind)
    ),

    _kind: $ => seq(
        token.immediate('_'),
        field(
          'kind',
          choice(
            alias(token.immediate(/[a-zA-Z]\w*/), $.identifier),
            alias(token.immediate(/\d+/), $.number_literal)
          )
        )
    ),

    _identifier: $ => choice(
      $.identifier,
      $.macro_identifier,
    ),

    comment: $ => token(seq('!', /.*/)),
