test/corpus/line_continuations.txt
================================================================================
Comment followed by line continuation
================================================================================

program test
    write(*, "('Testing line continuation')", &
       &  advance='no', &  ! Comment after line continuation
       &  iostat=istat)
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (write_statement
      (unit_identifier)
      (whitespace)
      (format_identifier
        (prefixed_string_literal
          (string_literal)))
      (whitespace)
      (whitespace)
      (whitespace)
      (keyword_argument
        (identifier)
        (prefixed_string_literal
          (string_literal)))
      (whitespace)
      (whitespace)
      (comment)
      (whitespace)
      (whitespace)
      (keyword_argument
        (identifier)
        (identifier)))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Line continuations with comment and blank lines
================================================================================

program test
    write(*, "('Testing line continuation')", &
       ! comment
       &  advance='no', &


       &  iostat=istat  &


       )
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (write_statement
      (unit_identifier)
      (whitespace)
      (format_identifier
        (prefixed_string_literal
          (string_literal)))
      (whitespace)
      (whitespace)
      (comment)
      (whitespace)
      (whitespace)
      (keyword_argument
        (identifier)
        (prefixed_string_literal
          (string_literal)))
      (whitespace)
      (whitespace)
      (whitespace)
      (keyword_argument
        (identifier)
        (identifier))
      (whitespace)
      (whitespace))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Line continuation before comma
================================================================================

program test
  integer :: foo & ! comment
    , bar
end program test

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (variable_declaration
      (intrinsic_type)
      (whitespace)
      (whitespace)
      (identifier)
      (whitespace)
      (whitespace)
      (comment)
      (whitespace)
      (whitespace)
      (identifier))
    (end_of_statement)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================================================================================
Line continuation before function suffix
================================================================================

program test
contains
  function foo( &
    bar) &  ! comment
  result(res)
    integer :: bar
  end function foo
end program test

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (internal_procedures
      (contains_statement)
      (end_of_statement)
      (whitespace)
      (function
        (function_statement
          (whitespace)
          (name
            (identifier))
          (parameters
            (whitespace)
            (whitespace)
            (identifier))
          (whitespace)
          (whitespace)
          (comment)
          (whitespace)
          (function_result
            (identifier))
          (end_of_statement))
        (whitespace)
        (variable_declaration
          (intrinsic_type)
          (whitespace)
          (whitespace)
          (identifier))
        (end_of_statement)
        (whitespace)
        (end_function_statement
          (whitespace)
          (whitespace)
          (name
            (identifier)))
        (end_of_statement)))
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================================================================================
Empty Write with FMT
================================================================================

program test
    write(*, 1)

1  format('hello')
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (write_statement
      (unit_identifier)
      (whitespace)
      (format_identifier
        (statement_label_reference)))
    (end_of_statement)
    (statement_label)
    (whitespace)
    (format_statement
      (transfer_items
        (string_literal)))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Inline comments
================================================================================

!comment
PROGRAM TEST
    int_val = 1     ! comment
    int_val = 1_SZ1 ! comment
contains ! comment
   subroutine foo() ! comment
   end subroutine foo ! comment
end program ! comment
! comment

--------------------------------------------------------------------------------

(translation_unit
  (comment)
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (assignment_statement
      (identifier)
      (whitespace)
      (whitespace)
      (number_literal))
    (whitespace)
    (end_of_statement)
    (comment)
    (whitespace)
    (assignment_statement
      (identifier)
      (whitespace)
      (whitespace)
      (number_literal
        (identifier)))
    (whitespace)
    (end_of_statement)
    (comment)
    (internal_procedures
      (contains_statement)
      (whitespace)
      (end_of_statement)
      (comment)
      (whitespace)
      (subroutine
        (subroutine_statement
          (whitespace)
          (name
            (identifier))
          (whitespace)
          (end_of_statement))
        (comment)
        (whitespace)
        (end_subroutine_statement
          (whitespace)
          (whitespace)
          (name
            (identifier)))
        (whitespace)
        (end_of_statement)))
    (comment)
    (end_program_statement
      (whitespace))
    (whitespace)
    (end_of_statement))
  (comment)
  (comment))

================================================================================
Line continuation in concat string
================================================================================

program test
  print*, "12&bar"
  print*, "&
    &hello"
  print*, "this is "&
    &"one string"
  print*, "this is "&
    & // "two strings"
  print*, "this is "&
    , "two strings"
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (prefixed_string_literal
          (string_literal))))
    (end_of_statement)
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (prefixed_string_literal
          (string_literal))))
    (end_of_statement)
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (prefixed_string_literal
          (string_literal))))
    (end_of_statement)
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (concatenation_expression
          (prefixed_string_literal
            (string_literal))
          (whitespace)
          (whitespace)
          (whitespace)
          (prefixed_string_literal
            (string_literal)))))
    (end_of_statement)
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (prefixed_string_literal
          (string_literal))
        (whitespace)
        (whitespace)
        (prefixed_string_literal
          (string_literal))))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Line continuation in hollerith constants
================================================================================
program test
1 format(6x, 10habcdef,&
    &ghi)
2 format(6x, 1&
    &0habcdefghik)
3 format(6x, 10&
    &habcdefghik)
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (statement_label)
    (whitespace)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (whitespace)
        (hollerith_constant)))
    (end_of_statement)
    (statement_label)
    (whitespace)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (whitespace)
        (hollerith_constant)))
    (end_of_statement)
    (statement_label)
    (whitespace)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (whitespace)
        (hollerith_constant)))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Line continuation immediately after number literal
================================================================================
program test
  integer :: b(3) = (/&
  1, &
  2, &
  3&
  /)
end program test
--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (variable_declaration
      (intrinsic_type)
      (whitespace)
      (whitespace)
      (init_declarator
        (sized_declarator
          (identifier)
          (size
            (number_literal)))
        (whitespace)
        (whitespace)
        (array_literal
          (whitespace)
          (number_literal)
          (whitespace)
          (whitespace)
          (number_literal)
          (ERROR
            (whitespace)
            (whitespace)
            (number_literal))
          (whitespace))))
    (end_of_statement)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================================================================================
Line continuation as part of string
================================================================================
program main
  ! This should print "I like fish&chips"
  print *, "I like fish&&
    &chips"
end program main
--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (comment)
    (whitespace)
    (print_statement
      (whitespace)
      (format_identifier)
      (whitespace)
      (output_item_list
        (prefixed_string_literal
          (string_literal))))
    (end_of_statement)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))
