test/corpus/regressions.txt
=================
padl
=================

program example_padl
  use stdlib_string_type, only: string_type, assignment(=), write (formatted)
  use stdlib_strings, only: padl
  implicit none
  type(string_type) :: string

  string = "left pad this string"
! string <-- "left pad this string"

  print '(dt)', padl(string, 25, "$") ! "$$$$$left pad this string"

  string = padl(string, 25)
! string <-- "     left pad this string"

end program example_padl

---

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (use_statement
      (whitespace)
      (module_name
        (name
          (identifier)))
      (included_items
        (whitespace)
        (whitespace)
        (identifier)
        (whitespace)
        (assignment)
        (whitespace)
        (defined_io_procedure
          (whitespace))))
    (end_of_statement)
    (whitespace)
    (use_statement
      (whitespace)
      (module_name
        (name
          (identifier)))
      (included_items
        (whitespace)
        (whitespace)
        (identifier)))
    (end_of_statement)
    (whitespace)
    (implicit_statement
      (whitespace)
      (none))
    (end_of_statement)
    (whitespace)
    (variable_declaration
      (derived_type
        (type_name
          (identifier)))
      (whitespace)
      (whitespace)
      (identifier))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (identifier)
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (comment)
    (whitespace)
    (print_statement
      (whitespace)
      (format_identifier
        (prefixed_string_literal
          (string_literal)))
      (whitespace)
      (output_item_list
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (whitespace)
            (number_literal)
            (whitespace)
            (prefixed_string_literal
              (string_literal))))))
    (whitespace)
    (end_of_statement)
    (comment)
    (whitespace)
    (assignment_statement
      (identifier)
      (whitespace)
      (whitespace)
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)
          (number_literal))))
    (end_of_statement)
    (comment)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================
if label
================

program foo

 if_label: if (.true.) then
    call do_something()
 else if_label
    call something_else()
 endif if_label

end program foo

---

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (if_statement
      (block_if_statement
        (block_label_start_expression
          (identifier))
        (whitespace)
        (whitespace)
        (parenthesized_expression
          (boolean_literal))
        (whitespace)
        (end_of_statement)
        (whitespace)
        (subroutine_call
          (whitespace)
          (identifier)
          (argument_list))
        (end_of_statement)
        (whitespace)
        (else_clause
          (whitespace)
          (block_label
            (identifier))
          (end_of_statement)
          (whitespace)
          (subroutine_call
            (whitespace)
            (identifier)
            (argument_list))
          (end_of_statement))
        (whitespace)
        (end_if_statement
          (whitespace)
          (block_label
            (identifier)))))
    (end_of_statement)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================
split if
================

program foo

 if (.true.) then
 else &
 if (.false.) then
 end if

end program

---

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (if_statement
      (block_if_statement
        (whitespace)
        (parenthesized_expression
          (boolean_literal))
        (whitespace)
        (end_of_statement)
        (whitespace)
        (elseif_clause
          (whitespace)
          (whitespace)
          (whitespace)
          (parenthesized_expression
            (boolean_literal))
          (whitespace)
          (end_of_statement))
        (whitespace)
        (end_if_statement
          (whitespace))))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Assignment/Variable modification clash
================================================================================

program test
  integer :: len
  len = 5
end program test

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (variable_declaration
      (intrinsic_type)
      (whitespace)
      (whitespace)
      (identifier))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (identifier)
      (whitespace)
      (whitespace)
      (number_literal))
    (end_of_statement)
    (end_program_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))

================================================================================
Data statement array subscripting clash
================================================================================

program test
   data(1, 2) = data(2, 1)
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (whitespace)
      name: (name
        (identifier))
      (end_of_statement))
    (whitespace)
    (assignment_statement
      left: (call_expression
        (identifier)
        (argument_list
          (number_literal)
          (whitespace)
          (number_literal)))
      (whitespace)
      (whitespace)
      right: (call_expression
        (identifier)
        (argument_list
          (number_literal)
          (whitespace)
          (number_literal))))
    (end_of_statement)
    (end_program_statement
      (whitespace))
    (end_of_statement)))

================================================================================
Multiple array assignments
================================================================================

  ! Too many assignment expressions and the first one gets parsed as a
  ! statement function
  SUBROUTINE mpi_error_handler(comm, error_code)
    CHARACTER(LEN=29) :: errstring(0:MPI_ERR_LASTCODE)

    errstring(MPI_SUCCESS                  ) = 'MPI_SUCCESS                  '
    errstring(MPI_ERR_BUFFER               ) = 'MPI_ERR_BUFFER               '
    errstring(MPI_ERR_COUNT                ) = 'MPI_ERR_COUNT                '
    errstring(MPI_ERR_TYPE                 ) = 'MPI_ERR_TYPE                 '
    errstring(MPI_ERR_TAG                  ) = 'MPI_ERR_TAG                  '
    errstring(MPI_ERR_COMM                 ) = 'MPI_ERR_COMM                 '
    errstring(MPI_ERR_RANK                 ) = 'MPI_ERR_RANK                 '
    errstring(MPI_ERR_REQUEST              ) = 'MPI_ERR_REQUEST              '

    print*, x

  END SUBROUTINE mpi_error_handler

--------------------------------------------------------------------------------

(translation_unit
  (whitespace)
  (comment)
  (whitespace)
  (comment)
  (whitespace)
  (subroutine
    (subroutine_statement
      (whitespace)
      (name
        (identifier))
      (parameters
        (identifier)
        (whitespace)
        (identifier))
      (end_of_statement))
    (whitespace)
    (variable_declaration
      (intrinsic_type
        (kind
          (keyword_argument
            (identifier)
            (number_literal))))
      (whitespace)
      (whitespace)
      (sized_declarator
        (identifier)
        (size
          (extent_specifier
            (number_literal)
            (identifier)))))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (whitespace)))
      (whitespace)
      (whitespace)
      (prefixed_string_literal
        (string_literal)))
    (end_of_statement)
    (whitespace)
    (print_statement
      (format_identifier)
      (whitespace)
      (output_item_list
        (identifier)))
    (end_of_statement)
    (whitespace)
    (end_subroutine_statement
      (whitespace)
      (whitespace)
      (name
        (identifier)))
    (end_of_statement)))
